<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- PANEL DE IMAGEN SUPERIOR -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="800px"
        android:layout_margin="200px">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/restaurante" />

    </LinearLayout>

    <!-- PANEL DE IMAGEN INFERIOR QUE CONTIENE 2 PANELES MAS -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="273dp">

        <LinearLayout
            android:layout_width="0px"
            android:layout_weight="60"
            android:layout_height="match_parent"
            android:layout_margin="40px"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2px"
                android:background="@color/teal_200"
                android:backgroundTint="@color/white"
                android:text="@string/name" />

            <EditText

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="#E53935"
                android:hint="@string/edtxtname"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/txtview" />

            <EditText

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="#E53935"
                android:hint="@string/edtxtpass" />
            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E53935"
                android:gravity="center"
                android:text="@string/btn_acces"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:layout_margin="40px"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="139dp"
                android:background="#00FFFFFF"
                android:gravity="center"
                android:src="@drawable/mesero_1" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E53935"
                android:gravity="center"
                android:text="@string/btn_nuevo" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>